[package]
name = "tiberian_dawn_rs"
version = "0.1.0"
edition = "2024"
proc-macro = true

[dependencies]
bitflags = "2.9.0"
mixlib = { path = "mixlib" }
regex = "1.11.1"
rust-ini = "0.21.1"
strum = "0.27.1"
strum_macros = "0.27.1"

[workspace]
resolver = "2"
members = ["mixlib"]

[build-dependencies]
csv = "1.3.1"
mixlib = { path = "mixlib" }
